# partial-zip

./: CMakeLists.txt  MSFTGuy’s SSH RAMDisk tool  main.c  partial.c  test.c
include/: common.h
